--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: swift
 osx_image: xcode10
 
 before_install:
-- travis_wait 35; cd Dmoe; pod update
+- travis_wait 35; cd Dmoe; pod install
 
 script:
 - set -o pipefail
