--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ language: swift
 osx_image: xcode10
 
 before_install:
-- travis_wait 35; cd Dmoe; pod update; pod install;
+- travis_wait 35; cd Dmoe; pod update; pod install; ls;
 
 script:
-- set -o pipefail
 - xcodebuild build -workspace AYSegmentedControlsDemo.xcworkspace -scheme "AYSegmentedControlsDemo" -sdk iphonesimulator | xcpretty
